# gh-activity-badge

./: .gitignore  CONTRIBUTING.md  README.md  REPOSITORY_SUMMARY.md  VERIFICATION_REPORT.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  update-stats.yml
examples/advanced/: README.md
examples/basic/: README.md
examples/self-hosted/: README.md
src/: generate_badge.py
src/badge/: __init__.py  api.py  config.py  formatting.py  main.py  readme.py  svg.py
src/badge/templates/: default.svg.j2
tests/: test_api.py  test_config.py  test_formatting.py  test_main.py  test_readme.py  test_svg.py
