[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-activity-badge"
version = "1.0.1"
description = "Generate animated SVG badges with GitHub statistics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Jan Sitarski" }]
dependencies = ["Jinja2>=3.1,<4.0", "MarkupSafe>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.0"]

[project.scripts]
gh-activity-badge = "badge.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
badge = ["templates/*.j2"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["badge"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src"]
